# order-series

./: .pdm.toml  README.md  pyproject.toml
.github/workflows/: pipeline.yml
order_series/: __init__.py  cli.py  main.py  series_handler.py
src/: main.py  series_handler.py
src/series/: __init__.py
test/: test_cli.py  test_filter_files.py  test_get_series_name.py  test_main.py
